--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Converters\WBIProspector.cs" />
     <Compile Include="Converters\WBIAsteroidProspector.cs" />
     <Compile Include="Utilities\WBIAsteroidSelector.cs" />
+    <Compile Include="Utilities\WBISelfDestruct.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
