--- a/GameData/WildBlueIndustries/000WildBlueTools/Parts/Utility/Buckboard2000.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Parts/Utility/Buckboard2000.cfg
@@ -13,7 +13,7 @@ PART
 	node_stack_bottom = 0, 0, 0.423, 0, -1, 0, 1
 	node_stack_top = 0, 0.8288187, 0.423, 0, 1, 0, 1
 
-	TechRequired = generalConstruction
+	TechRequired = advConstruction
 	entryCost = 3800
 	cost = 1200
 	category = Utility
@@ -97,7 +97,7 @@ PART
 		capacityFactor = 0.114
 
 		//Name of the logo panel transforms
-		logoPanelTransform = logoPanel001
+		logoPanelTransforms = logoPanel001
 		decalsVisible = true
 
 		//If the part has a KIS container, this is the base and max amount
