Docking port fixes

--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Switchers\WBIConvertibleMPL.cs" />
     <Compile Include="Converters\WBIModuleGreenhouse.cs" />
     <Compile Include="GUI\InfoView.cs" />
     <Compile Include="GUI\OpsManagerView.cs" />
