--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animation\ModuleAnimateGenericSFX.cs" />
+    <Compile Include="Converters\WBIGasTurbine.cs" />
     <Compile Include="Science\GeoLabView.cs" />
     <Compile Include="Science\WBIExpCompleteParam.cs" />
     <Compile Include="Science\WBIEnhancedExperiment.cs" />
@@ -88,7 +89,7 @@
     <Compile Include="Utilities\WBIGroundStabilizer.cs" />
     <Compile Include="Science\WBITargetBodyParam.cs" />
     <Compile Include="Science\WBIExpConditionsParam.cs" />
-    <Compile Include="Wrappers\WBIKISInventoryWrapper.cs" />
+    <Compile Include="Converters\Wrappers\WBIKISInventoryWrapper.cs" />
     <Compile Include="IVAUtils\ButtonClickDelegate.cs" />
     <Compile Include="PropModules\InternalPlasmaScreen.cs" />
     <Compile Include="IVAUtils\ExternalCamera.cs" />
@@ -129,13 +130,13 @@
     <Compile Include="PropModules\WBIInternalButtonCabinLight.cs" />
     <Compile Include="PropModules\WBIPropStateHelper.cs" />
     <Compile Include="Switchers\WBIConvertibleStorage.cs" />
-    <Compile Include="Wrappers\WBIKISSeatInventoryConfig.cs" />
-    <Compile Include="Wrappers\WBISeatInventoryHelper.CS" />
+    <Compile Include="Converters\Wrappers\WBIKISSeatInventoryConfig.cs" />
+    <Compile Include="Converters\Wrappers\WBISeatInventoryHelper.CS" />
     <Compile Include="Science\WBIExperimentLab.cs" />
     <Compile Include="Science\WBIModuleScienceExperiment.cs" />
     <Compile Include="Science\WBIExperimentManifest.cs" />
     <Compile Include="Utilities\WBINodeMover.cs" />
-    <Compile Include="Wrappers\WBIRTWrapper.cs" />
+    <Compile Include="Converters\Wrappers\WBIRTWrapper.cs" />
     <Compile Include="Parts\WBIModuleDecouple.cs" />
     <Compile Include="Switchers\WBIOpsManager.cs" />
     <Compile Include="GUI\LocalOpsManager.cs" />
