--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -160,9 +160,9 @@
     <Compile Include="Utilities\WBINodeStripper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BARIS\BARIS.csproj">
-      <Project>{7923C5AB-895D-4687-883E-CD5116986954}</Project>
-      <Name>BARIS</Name>
+    <ProjectReference Include="..\BARIS\BARISBridge\BARISBridge.csproj">
+      <Project>{8D46364B-4F22-403D-84E3-C2DCA8E49A4A}</Project>
+      <Name>BARISBridge</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
