--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -161,6 +161,7 @@
     <Compile Include="PropModules\WBIJukebox.cs" />
     <Compile Include="Parts\WBICruiseControl.cs" />
     <Compile Include="Utilities\WBIPartDeprecator.cs" />
+    <Compile Include="Converters\WBIModuleResourceConverterFX.cs" />
     <Compile Include="Wrappers\WBIRTWrapper.cs" />
     <Compile Include="Parts\WBIModuleDecouple.cs" />
     <Compile Include="Switchers\WBIOpsManager.cs" />
