--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Parts\WBICruiseControl.cs" />
     <Compile Include="Utilities\WBIPartDeprecator.cs" />
     <Compile Include="Converters\WBIModuleResourceConverterFX.cs" />
+    <Compile Include="WBIMultiResourceHarvester.cs" />
     <Compile Include="Wrappers\WBIRTWrapper.cs" />
     <Compile Include="Parts\WBIModuleDecouple.cs" />
     <Compile Include="Switchers\WBIOpsManager.cs" />
