Bug fixes & new experiment

--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/WBIResources.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/WBIResources.cfg
@@ -15,7 +15,7 @@ RESOURCE_DEFINITION
 {
 	name = ElectroPlasma
 	displayName = ElectroPlasma
-	density = 0
+	density = 0.00006
 	flowMode = ALL_VESSEL
 	transfer = NONE
 	isTweakable = false
@@ -162,6 +162,18 @@ RESOURCE_DEFINITION
 RESOURCE_DEFINITION
 {
 	name = SolarReports
+	density = 0.0
+	unitCost = 0
+	hsp = 10
+	flowMode = ALL_VESSEL
+	transfer = PUMP
+	isTweakable = false
+	isVisible = true
+}
+
+RESOURCE_DEFINITION
+{
+	name = SimulatorTime
 	density = 0.0
 	unitCost = 0
 	hsp = 10
