--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Propellium.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Propellium.cfg
@@ -2,6 +2,7 @@ RESOURCE_DEFINITION
 {
 	name = Propellium
 	displayName = Propellium
+	abbreviation = PR
 	density = 0.0000708
 	flowMode = ALL_VESSEL
 	transfer = PUMP
@@ -17,14 +18,14 @@ STORAGE_TEMPLATE
 	author = Angel-125
 	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/Propellium
 	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/PropelliumGlow
-	description = This kit stores Propellium, a key component of LiquidFuel.
+	description = This kit stores Propellium, a naturally occurring high efficiency fuel, and a key component of LiquidFuel.
 	templateTags = stowage
 
 	RESOURCE
 	{
 		name = Propellium
-		amount = 5600
-		maxAmount = 5600
+		amount = 56000
+		maxAmount = 56000
 	}
 
 }
@@ -35,14 +36,79 @@ GLOBAL_RESOURCE
 	ResourceType = 3
 	
 	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 2
+        MaxAbundance = 10
+        Variance = 0
+        MinAltitude = 0.5
+        MaxAltitude = 0.5
+        MinRange = 10
+        MaxRange = 10
+    }
+}
+PLANETARY_RESOURCE
+{
+	ResourceName = Propellium
+	ResourceType = 2
+	PlanetName = Sun
+	
+	Distribution
+	{
+		PresenceChance = 70
+		MinAbundance = 8000
+		MaxAbundance = 8000
+		Variance = 50
+		Dispersal = 50
+	}
+}
+GLOBAL_RESOURCE
+{
+	ResourceName = Propellium
+	ResourceType = 3
+	PlanetName = Sun
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 15000
+        MaxAbundance = 15000
+        MinAltitude = 10
+        MaxAltitude = 10
+        MinRange = 20
+        MaxRange = 20
+        Variance = 0
+    }
+}
+PLANETARY_RESOURCE
+{
+	ResourceName = Propellium
+	ResourceType = 2
+	PlanetName = Jool
+	
+	Distribution
 	{
 		PresenceChance = 100
-		MinAbundance = .00000001
-		MaxAbundance = .00000005
-		MinAltitude = 500
-		MaxAltitude = 200000000000
-		MinRange = .01
-		MaxRange = .5	
-		Variance = 20
+		MinAbundance = 40
+		MaxAbundance = 80
+		Variance = 10
 	}
+}
+GLOBAL_RESOURCE
+{
+	ResourceName = Propellium
+	ResourceType = 3
+	PlanetName = Jool
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 30
+        MaxAbundance = 60
+        MinAltitude = 0.1
+        MaxAltitude = 0.1
+        MinRange = 400
+        MaxRange = 400
+        Variance = 0
+    }
 }
