fixed global :vs: planetary distribution

--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Propellium.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Propellium.cfg
@@ -38,8 +38,8 @@ GLOBAL_RESOURCE
 	Distribution
     {
         PresenceChance = 100
-        MinAbundance = 2
-        MaxAbundance = 10
+        MinAbundance = 0.2
+        MaxAbundance = 1
         Variance = 0
         MinAltitude = 2
         MaxAltitude = 2
@@ -56,13 +56,13 @@ PLANETARY_RESOURCE
 	Distribution
 	{
 		PresenceChance = 70
-		MinAbundance = 800
-		MaxAbundance = 800
+		MinAbundance = 80
+		MaxAbundance = 80
 		Variance = 50
 		Dispersal = 50
 	}
 }
-GLOBAL_RESOURCE
+PLANETARY_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 3
@@ -71,8 +71,8 @@ GLOBAL_RESOURCE
 	Distribution
     {
         PresenceChance = 100
-        MinAbundance = 1500
-        MaxAbundance = 1500
+        MinAbundance = 150
+        MaxAbundance = 150
         MinAltitude = 10
         MaxAltitude = 10
         MinRange = 20
@@ -94,7 +94,7 @@ PLANETARY_RESOURCE
 		Variance = 10
 	}
 }
-GLOBAL_RESOURCE
+PLANETARY_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 3
@@ -107,8 +107,8 @@ GLOBAL_RESOURCE
         MaxAbundance = 60
         MinAltitude = 0.1
         MaxAltitude = 0.1
-        MinRange = 400
-        MaxRange = 400
+        MinRange = 80
+        MaxRange = 100
         Variance = 0
     }
 }
