--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Propellium.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Propellium.cfg
@@ -1,3 +1,4 @@
+//A.K.A. liquid hydrogen
 RESOURCE_DEFINITION
 {
 	name = Propellium
@@ -24,8 +25,8 @@ STORAGE_TEMPLATE
 	RESOURCE
 	{
 		name = Propellium
-		amount = 56000
-		maxAmount = 56000
+		amount = 5600
+		maxAmount = 5600
 	}
 
 }
