Classic Stock and Omni

--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/MM_SAFER.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/MM_SAFER.cfg
@@ -50,7 +50,7 @@
 		{
 			ResourceName = ElectricCharge
 			Ratio = 125
-			DumpExcess = true
+			DumpExcess = false
 		}
 
 		OUTPUT_RESOURCE
@@ -64,14 +64,14 @@
 	RESOURCE
 	{
 		name = NuclearFuel
-		amount = 100
-		maxAmount = 100
+		amount = 20
+		maxAmount = 20
 	}
 
 	RESOURCE
 	{
 		name = NuclearWaste
 		amount = 0
-		maxAmount = 100
+		maxAmount = 20
 	}
 }
