--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/Coolant.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/Coolant.cfg
@@ -1,3 +1,15 @@
+RESOURCE_DEFINITION
+{
+	name = Coolant
+	density = 0.000534
+	unitCost = 0.27
+	hsp = 3580
+	flowMode = STAGE_PRIORITY_FLOW
+	transfer = PUMP
+	isTweakable = true
+	volume = 5
+}
+
 STORAGE_TEMPLATE
 {
 	name = Coolant
@@ -11,8 +23,8 @@ STORAGE_TEMPLATE
 	RESOURCE
 	{
 		name = Coolant
-		amount = 5600
-		maxAmount = 5600
+		amount = 1800
+		maxAmount = 1800
 	}
 
 }
