--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/FusionPellets.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Storage/FusionPellets.cfg
@@ -1,3 +1,15 @@
+RESOURCE_DEFINITION:NEEDS[!CommunityResourcePack]
+{
+	name = FusionPellets
+	displayName = FusionPellets
+	density = 0.000216
+	unitCost = 150
+	flowMode = STAGE_PRIORITY_FLOW
+	transfer = PUMP
+	isTweakable = true
+	volume = 5
+}
+
 STORAGE_TEMPLATE
 {
 	name = FusionPellets
@@ -12,8 +24,8 @@ STORAGE_TEMPLATE
 	RESOURCE
 	{
 		name = FusionPellets
-		amount = 5600
-		maxAmount = 5600
+		amount = 1800
+		maxAmount = 1800
 	}
 
 }
