--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Contracts\WBIFerryKerbalParam.cs" />
     <Compile Include="Contracts\WBIKerbalStayParam.cs" />
     <Compile Include="Converters\WBIGasTurbine.cs" />
+    <Compile Include="Converters\WBIOmniConverter.cs" />
     <Compile Include="KIS\WBIKISInventoryManager.cs" />
     <Compile Include="Parts\WBIModuleAsteroidResource.cs" />
     <Compile Include="PlayModes\PlayModesWindow.cs" />
@@ -172,6 +173,10 @@
     <Compile Include="ResourceRefinery\WBIRefineryView.cs" />
     <Compile Include="ToolTips\WBIToolTipManager.cs" />
     <Compile Include="ToolTips\WBIToolTipView.cs" />
+    <Compile Include="KIS\WBIKISAddonConfig.cs" />
+    <Compile Include="KIS\WBIKISWrapper.cs" />
+    <Compile Include="Switchers\WBIOmniStorage.cs" />
+    <Compile Include="GUI\WBISingleOpsView.cs" />
     <Compile Include="Wrappers\WBIRTWrapper.cs" />
     <Compile Include="Parts\WBIModuleDecouple.cs" />
     <Compile Include="Switchers\WBIOpsManager.cs" />
