--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Lead.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/Common/Storage/Lead.cfg
@@ -30,3 +30,171 @@ STORAGE_TEMPLATE
 	}
 
 }
+
+@PART[PotatoRoid]:NEEDS[!CommunityResourcePack]
+{
+	MODULE
+	{
+		name = ModuleAsteroidResource
+		resourceName = Lead
+		presenceChance = 25
+		lowRange = 1
+		highRange = 10
+	}	
+}
+
+GLOBAL_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 0
+	
+	Distribution
+	{
+		PresenceChance = 70
+		MinAbundance = 3
+		MaxAbundance = 10
+		Variance = 50
+		Dispersal = 20
+	}
+}
+GLOBAL_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 3
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 0.1
+        MaxAbundance = 5
+        MinAltitude = 0.25
+        MaxAltitude = 0.25
+        MinRange = 0.2
+        MaxRange = 0.2
+        Variance = 0
+    }
+}
+
+PLANETARY_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 0
+	PlanetName = Kerbin
+	
+	Distribution
+	{
+		PresenceChance = 100
+		MinAbundance = 2
+		MaxAbundance = 8
+		Variance = 50
+		Dispersal = 20
+	}
+}
+
+PLANETARY_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 0
+	PlanetName = Jool
+	
+	Distribution
+	{
+		PresenceChance = 0
+		MinAbundance = 0
+		MaxAbundance = 0
+		Variance = 0
+		Dispersal = 0
+	}
+}
+
+// Exospheric - Slivers of scoopable Lead at the real atmo edge
+PLANETARY_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 3
+	PlanetName = Eve
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 1
+        MaxAbundance = 5
+        MinAltitude = 0.25
+        MaxAltitude = 0.25
+        MinRange = 0.2
+        MaxRange = 0.2
+        Variance = 0
+    }
+}
+PLANETARY_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 3
+	PlanetName = Kerbin
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 10
+        MaxAbundance = 10
+        MinAltitude = 0.22
+        MaxAltitude = 0.22
+        MinRange = 0.2
+        MaxRange = 0.2
+        Variance = 0
+    }
+}
+PLANETARY_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 3
+	PlanetName = Duna
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 1
+        MaxAbundance = 6
+        MinAltitude = 0.22
+        MaxAltitude = 0.22
+        MinRange = 0.2
+        MaxRange = 0.2
+        Variance = 0
+    }
+}
+PLANETARY_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 3
+	PlanetName = Jool
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 0.1
+        MaxAbundance = 0.5
+        MinAltitude = 0.05
+        MaxAltitude = 0.05
+        MinRange = 0.2
+        MaxRange = 0.2
+        Variance = 0
+    }
+}
+PLANETARY_RESOURCE:NEEDS[!CommunityResourcePack]
+{
+	ResourceName = Lead
+	ResourceType = 3
+	PlanetName = Laythe
+	
+	Distribution
+    {
+        PresenceChance = 100
+        MinAbundance = 3
+        MaxAbundance = 5
+        MinAltitude = 0.2
+        MaxAltitude = 0.2
+        MinRange = 0.2
+        MaxRange = 0.2
+        Variance = 0
+    }
+}
