--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -43,6 +43,7 @@ OMNICONVERTER
 		ResourceName = ElectricCharge
 		Ratio = 8.5
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -50,6 +51,7 @@ OMNICONVERTER
 		ResourceName = Water
 		Ratio = 1.0000428
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -88,6 +90,7 @@ OMNICONVERTER
 		ResourceName = ElectricCharge
 		Ratio = 36
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -95,6 +98,7 @@ OMNICONVERTER
 		ResourceName = Water
 		Ratio = 0.1091
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -126,6 +130,7 @@ OMNICONVERTER
 		ResourceName = ElectricCharge
 		Ratio = 18
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -192,6 +197,7 @@ OMNICONVERTER
 	{
 		ResourceName = ElectricCharge
 		Ratio = 70
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -229,7 +235,7 @@ OMNICONVERTER
 		ResourceName = LiquidFuel
 		Ratio = 0.45
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -237,7 +243,7 @@ OMNICONVERTER
 		ResourceName = Oxidizer
 		Ratio = 0.55
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -289,6 +295,7 @@ OMNICONVERTER
 		ResourceName = LiquidFuel
 		Ratio = 0.45
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -296,6 +303,7 @@ OMNICONVERTER
 		ResourceName = Oxidizer
 		Ratio = 0.55
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -332,6 +340,7 @@ OMNICONVERTER
 		ResourceName = MonoPropellant
 		Ratio = 1
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -377,14 +386,15 @@ OMNICONVERTER
 		ResourceName = MonoPropellant
 		Ratio = 0.5
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 	
 	OUTPUT_RESOURCE
 	{
 		ResourceName = Oxium
 		Ratio = 0.5
-		FlowMode = STAGE_PRIORITY_FLOW
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -421,7 +431,7 @@ OMNICONVERTER
 		ResourceName = LiquidFuel
 		Ratio = 0.9
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -458,7 +468,7 @@ OMNICONVERTER
 		ResourceName = Oxidizer
 		Ratio = 1.1
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -497,6 +507,7 @@ OMNICONVERTER
 		ResourceName = XenonGas
 		Ratio = 5
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -534,6 +545,7 @@ OMNICONVERTER
 		ResourceName = Oxium
 		Ratio = 0.779
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -541,6 +553,7 @@ OMNICONVERTER
 		ResourceName = Propellium
 		Ratio = 1.56
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -579,6 +592,7 @@ OMNICONVERTER
 		ResourceName = ElectricCharge
 		Ratio = 10
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -586,6 +600,7 @@ OMNICONVERTER
 		ResourceName = Water
 		Ratio = 0.1
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -630,6 +645,7 @@ OMNICONVERTER
 		ResourceName = Water
 		Ratio = 0.9
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -637,6 +653,7 @@ OMNICONVERTER
 		ResourceName = Slag
 		Ratio = 0.1
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -674,6 +691,7 @@ OMNICONVERTER
 		ResourceName = Blutonium
 		Ratio = 0.0002
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -681,6 +699,7 @@ OMNICONVERTER
 		ResourceName = Water
 		Ratio = 1
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -732,6 +751,7 @@ OMNICONVERTER
 		ResourceName = Equipment
 		Ratio = 1.0
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -778,7 +798,7 @@ OMNICONVERTER
 		ResourceName = Konkrete
 		Ratio = 0.25
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	 }
 }
 
@@ -822,6 +842,7 @@ OMNICONVERTER
 		ResourceName = NuclearFuel
 		Ratio = 0.001
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -866,6 +887,7 @@ OMNICONVERTER
 		ResourceName:NEEDS[FarFutureTechnologies] = NuclearSaltWater
 		Ratio = 1
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -910,6 +932,7 @@ OMNICONVERTER
 		ResourceName = XenonGas
 		Ratio = 0.001
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -953,6 +976,7 @@ OMNICONVERTER
 		ResourceName = Slag
 		Ratio = 0.00001
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1011,7 +1035,7 @@ OMNICONVERTER
 		ResourceName = Coolant
 		Ratio = 0.21
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1065,7 +1089,7 @@ OMNICONVERTER
 		ResourceName = FusionPellets
 		Ratio = 0.00045
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1103,6 +1127,7 @@ OMNICONVERTER
 		ResourceName = ResearchKits
 		Ratio = 0.02
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1148,6 +1173,7 @@ OMNICONVERTER
 		ResourceName = Compost
 		Ratio = .001
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1186,6 +1212,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 		ResourceName = RocketParts
 		Ratio = 1.5
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -1193,6 +1220,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 		ResourceName = ScrapMetal
 		Ratio = 1.0125
 		DumpExcess = true
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1235,9 +1263,8 @@ OMNICONVERTER:NEEDS[Launchpad]
 	OUTPUT_RESOURCE
 	{
 		ResourceName = Metal
-
 		Ratio = 0.4935
-
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1269,7 +1296,6 @@ OMNICONVERTER:NEEDS[Launchpad]
 	{
 			
 		ResourceName = ElectricCharge
-
 		Ratio = 1
 	}
 
@@ -1277,8 +1303,8 @@ OMNICONVERTER:NEEDS[Launchpad]
 	OUTPUT_RESOURCE
 	{
 		ResourceName = Metal
-
 		Ratio = 1
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1312,7 +1338,6 @@ OMNICONVERTER:NEEDS[Launchpad]
 	{
 			
 		ResourceName = ElectricCharge
-
 		Ratio = 5
 	}
 
@@ -1322,6 +1347,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 	{
 		ResourceName = ScrapMetal
 		Ratio = 0.0625
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1365,6 +1391,7 @@ OMNICONVERTER:NEEDS[SnacksUtils]
 		ResourceName = Snacks
 		Ratio = 0.00014
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
 
@@ -1401,5 +1428,6 @@ OMNICONVERTER:NEEDS[SnacksUtils]
 		ResourceName = Compost
 		Ratio = 0.001
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 }
