--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -28,14 +28,14 @@ OMNICONVERTER
 	{
 		ResourceName = Propellium
 		Ratio = 1.56
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Oxium
 		Ratio = 0.78
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -75,14 +75,14 @@ OMNICONVERTER
 	{
 		ResourceName = LiquidFuel
 		Ratio = 0.0405
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Oxidizer
 		Ratio = 0.0494
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -122,7 +122,7 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 0.01
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -190,7 +190,7 @@ OMNICONVERTER
 	{
 		ResourceName = FusionPellets
 		Ratio = 0.0001
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -221,13 +221,14 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 0.5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 30
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -267,27 +268,28 @@ OMNICONVERTER
 	{
 		ResourceName = Hydrokerbon
 		Ratio = 0.3
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Propellium
 		Ratio = 0.25
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Oxium
 		Ratio = 0.25
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 5
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -326,13 +328,14 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 0.5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 30
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -364,14 +367,14 @@ OMNICONVERTER
 	{
 		ResourceName = Propellium
 		Ratio = 1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Nitronite
 		Ratio = 0.5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
@@ -379,6 +382,7 @@ OMNICONVERTER
 		ResourceName = ElectricCharge
 		Ratio = 5
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -417,13 +421,14 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 0.45
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 30
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -454,13 +459,14 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 0.55
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 30
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -492,7 +498,7 @@ OMNICONVERTER
 	{
 		ResourceName = Zeonium
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
@@ -500,6 +506,7 @@ OMNICONVERTER
 		ResourceName = ElectricCharge
 		Ratio = 5
 		DumpExcess = false
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -531,13 +538,14 @@ OMNICONVERTER
 	{
 		ResourceName = Water
 		Ratio = 1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 22
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -577,14 +585,14 @@ OMNICONVERTER
 	{
 		ResourceName = MonoPropellant
 		Ratio = 0.0405
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Propellium
 		Ratio = 0.0494
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -624,20 +632,21 @@ OMNICONVERTER
 	{
 		ResourceName = GrayWater
 		Ratio = 1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Nitronite
 		Ratio = 1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 22
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -677,13 +686,14 @@ OMNICONVERTER
 		ResourceName:NEEDS[!FarFutureTechnologies] = Explodium
 		ResourceName:NEEDS[FarFutureTechnologies] = NuclearSaltWater
 		Ratio = 1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 18
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -723,27 +733,28 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 0.5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = PreciousMetals
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Minerite
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 18
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -774,24 +785,25 @@ OMNICONVERTER
 	 {
 		ResourceName = Water
 		Ratio = 0.5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	 }
 	 INPUT_RESOURCE
 	 {
 		ResourceName = Minerite
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	 }
 	 INPUT_RESOURCE
 	 {
 		ResourceName = Slag
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	 }
 	 INPUT_RESOURCE
 	 {
 		ResourceName = ElectricCharge
 		Ratio = 30
+		FlowMode = ALL_VESSEL
 	 }
 	 OUTPUT_RESOURCE
 	 {
@@ -821,20 +833,21 @@ OMNICONVERTER
 	{
 		ResourceName = Blutonium
 		Ratio = 0.0015
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Hexagen
 		Ratio = 0.0005
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 18
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -865,20 +878,21 @@ OMNICONVERTER
 	{
 		ResourceName = Blutonium
 		Ratio = 0.0002
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Water
 		Ratio = 1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 18
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -910,13 +924,14 @@ OMNICONVERTER
 	{
 		ResourceName = NuclearWaste
 		Ratio = 0.001
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 18
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -924,7 +939,7 @@ OMNICONVERTER
 		ResourceName = NuclearFuel
 		Ratio = 0.0005
 		DumpExcess = false
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -956,13 +971,14 @@ OMNICONVERTER
 	{
 		ResourceName = ElectricCharge
 		Ratio = 15
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Ore
 		Ratio = 0.0014
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -1000,34 +1016,35 @@ OMNICONVERTER
 	{
 		ResourceName = Water
 		Ratio = 1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Ore
 		Ratio = 5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Zeonium
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Minerite
 		Ratio = 3
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 30
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -1059,30 +1076,31 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 15
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 	INPUT_RESOURCE
 	{
 		ResourceName = Water
 		Ratio = 1.5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 	INPUT_RESOURCE
 	{
 		ResourceName = Minerite
 		Ratio = 0.01
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 	INPUT_RESOURCE
 	{
 		ResourceName = Hexagen
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 30
+		FlowMode = ALL_VESSEL
 	}
 	OUTPUT_RESOURCE
 	{
@@ -1113,13 +1131,14 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = 0.5
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 15
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -1152,20 +1171,21 @@ OMNICONVERTER
 	{
 		ResourceName = Ore
 		Ratio = .002
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Minerite
 		Ratio = .002
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 3.5
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -1197,14 +1217,14 @@ OMNICONVERTER:NEEDS[Launchpad]
 	{
 		ResourceName = Metal
 		Ratio = 0.2
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 	
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 10
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -1246,7 +1266,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 
 		Ratio = 0.7
 
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 
@@ -1257,6 +1277,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 
 		Ratio = 7.5
 		
+		FlowMode = ALL_VESSEL
 	}
 
 	
@@ -1288,7 +1309,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 
 		ResourceName = ScrapMetal
 		Ratio = 9.75
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 
@@ -1297,6 +1318,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 			
 		ResourceName = ElectricCharge
 		Ratio = 1
+		FlowMode = ALL_VESSEL
 	}
 
 	
@@ -1330,7 +1352,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 
 		ResourceName = Equipment
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 
@@ -1339,6 +1361,7 @@ OMNICONVERTER:NEEDS[Launchpad]
 			
 		ResourceName = ElectricCharge
 		Ratio = 5
+		FlowMode = ALL_VESSEL
 	}
 
 	
@@ -1370,20 +1393,21 @@ OMNICONVERTER:NEEDS[SnacksUtils]
 	{
 		ResourceName = Water
 		Ratio = 0.000328125
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = Compost
 		Ratio = 0.000109375
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 6
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
@@ -1414,13 +1438,14 @@ OMNICONVERTER:NEEDS[SnacksUtils]
 	{
 		ResourceName = Soil
 		Ratio = 0.1
-		FlowMode = STAGE_PRIORITY_FLOW
+		FlowMode = ALL_VESSEL
 	}
 
 	INPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
 		Ratio = 6
+		FlowMode = ALL_VESSEL
 	}
 
 	OUTPUT_RESOURCE
