minor omnistorage fix

--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Raptium.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Storage/Raptium.cfg
@@ -37,7 +37,7 @@ STORAGE_TEMPLATE
 	author = JadeOfMaar
 	logoPanel = WildBlueIndustries/000WildBlueTools/Decals/LiquidFuel
 	glowPanel = WildBlueIndustries/000WildBlueTools/Decals/LiquidFuelGlow
-	description = This kit stores Raptium and Oxium. This mixture enables cryo-powered superior heavy rocketry.
+	description = This kit stores Raptium and Oxidizer. This mixture enables cryo-powered superior heavy rocketry.
 	templateTags = stowage
 
 	// 57:43; thanks Taniwha
@@ -49,7 +49,7 @@ STORAGE_TEMPLATE
 	}
 	RESOURCE
 	{
-		name = Oxium
+		name = Oxidizer
 		amount = 774
 		maxAmount = 774
 	}
