--- a/WildBlueTools.csproj
+++ b/WildBlueTools.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Submarine\WBIAquaticRCS.cs" />
     <Compile Include="Submarine\WBIAquaticEngine.cs" />
     <Compile Include="Submarine\WBIDiveComputer.cs" />
+    <Compile Include="Submarine\WBIPressureOverride.cs" />
     <Compile Include="Wrappers\WBIRTWrapper.cs" />
     <Compile Include="Parts\WBIModuleDecouple.cs" />
     <Compile Include="Switchers\WBIOpsManager.cs" />
